--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,7 +26,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: lefth-nd 
 
 # Build settings
-theme: jekyll-theme-modernist
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
